Removed commented-out status from flex-auto class to fix nav-bar spacing!

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,9 +50,9 @@
   font-size: 20px;
 }
 
-/* .flex-auto {
+.flex-auto {
   flex-grow: 1;
-} */
+}
 
 .travel-bar {
   margin: 5%;
